Move from ajax to uWS fully

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -11,8 +11,8 @@
     <script src="/js/egendpoll.js"></script>
   </head>
   <body>
-    <button onclick="sendDataToEgend();">Start Poll</button>
-    <button onclick="clearTimeout(dataLoop);">Stop</button>
+    <button onclick="initConnection();">Connect</button>
+    <button onclick="clearTimeout(dataLoop);">DC</button>
     <br/>
     <span id="connected">False</span>
   </body>
